# Flags to pass to the compiler & linker.
AM_CXXFLAGS = -Wall 
AM_LDFLAGS =

# Binaries and targets.
bin_PROGRAMS = btclient
btclient_SOURCES = btclient.cc btclient.h \
		   config.cc config.h \
		   crypto.cc crypto.h \
		   http.cc http.h \
		   json.cc json.h \
		   options.cc options.h \
		   params.cc params.h \
		   main.cc
